--- a/user-profile-lite.html
+++ b/user-profile-lite.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="styles/shards-dashboards.1.1.0.min.css">
     <link rel="stylesheet" href="styles/extras.1.1.0.min.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+      
+      <link href="styles/win95.css" rel="stylesheet">
+      
   </head>
   <body class="h-100">
     <div class="color-switcher animated">
@@ -71,7 +74,7 @@
               <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
                 <div class="d-table m-auto">
                   <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="images/shards-dashboards-logo.svg" alt="Shards Dashboard">
-                  <span class="d-none d-md-inline ml-1">Shards Dashboard</span>
+                  <span class="d-none d-md-inline ml-1">Shards Dashboard Win95</span>
                 </div>
               </a>
               <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
@@ -139,7 +142,7 @@
         <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
           <div class="main-navbar sticky-top bg-white">
             <!-- Main Navbar -->
-            <nav class="navbar align-items-stretch navbar-light flex-md-nowrap p-0">
+            <nav class="navbar navbar-95 align-items-stretch navbar-light flex-md-nowrap p-0">
               <form action="#" class="main-navbar__search w-100 d-none d-md-flex d-lg-flex">
                 <div class="input-group input-group-seamless ml-3">
                   <div class="input-group-prepend">
@@ -230,7 +233,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card card-small mb-4 pt-3">
-                  <div class="card-header border-bottom text-center">
+                  <div class="border-bottom text-center">
                     <div class="mb-3 mx-auto">
                       <img class="rounded-circle" src="images/avatars/0.jpg" alt="User Avatar" width="110"> </div>
                     <h4 class="mb-0">Sierra Brooks</h4>
@@ -269,41 +272,41 @@
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="feFirstName">First Name</label>
-                                <input type="text" class="form-control" id="feFirstName" placeholder="First Name" value="Sierra"> </div>
+                                <input type="text" class="form-95" id="feFirstName" placeholder="First Name" value="Sierra"> </div>
                               <div class="form-group col-md-6">
                                 <label for="feLastName">Last Name</label>
-                                <input type="text" class="form-control" id="feLastName" placeholder="Last Name" value="Brooks"> </div>
+                                <input type="text" class="form-95" id="feLastName" placeholder="Last Name" value="Brooks"> </div>
                             </div>
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="feEmailAddress">Email</label>
-                                <input type="email" class="form-control" id="feEmailAddress" placeholder="Email" value="sierra@example.com"> </div>
+                                <input type="email" class="form-95" id="feEmailAddress" placeholder="Email" value="sierra@example.com"> </div>
                               <div class="form-group col-md-6">
                                 <label for="fePassword">Password</label>
-                                <input type="password" class="form-control" id="fePassword" placeholder="Password"> </div>
+                                <input type="password" class="form-95" id="fePassword" placeholder="Password"> </div>
                             </div>
                             <div class="form-group">
                               <label for="feInputAddress">Address</label>
-                              <input type="text" class="form-control" id="feInputAddress" placeholder="1234 Main St"> </div>
+                              <input type="text" class="form-95" id="feInputAddress" placeholder="1234 Main St"> </div>
                             <div class="form-row">
                               <div class="form-group col-md-6">
                                 <label for="feInputCity">City</label>
-                                <input type="text" class="form-control" id="feInputCity"> </div>
+                                <input type="text" class="form-95" id="feInputCity"> </div>
                               <div class="form-group col-md-4">
                                 <label for="feInputState">State</label>
-                                <select id="feInputState" class="form-control">
+                                <select id="feInputState" class="form-95">
                                   <option selected>Choose...</option>
                                   <option>...</option>
                                 </select>
                               </div>
                               <div class="form-group col-md-2">
                                 <label for="inputZip">Zip</label>
-                                <input type="text" class="form-control" id="inputZip"> </div>
+                                <input type="text" class="form-95" id="inputZip"> </div>
                             </div>
                             <div class="form-row">
                               <div class="form-group col-md-12">
                                 <label for="feDescription">Description</label>
-                                <textarea class="form-control" name="feDescription" rows="5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eaque, quidem, commodi soluta qui quae minima obcaecati quod dolorum sint alias, possimus illum assumenda eligendi cumque?</textarea>
+                                <textarea class="form-95" name="feDescription" rows="5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eaque, quidem, commodi soluta qui quae minima obcaecati quod dolorum sint alias, possimus illum assumenda eligendi cumque?</textarea>
                               </div>
                             </div>
                             <button type="submit" class="btn btn-accent">Update Account</button>
@@ -317,7 +320,7 @@
             </div>
             <!-- End Default Light Table -->
           </div>
-          <footer class="main-footer d-flex p-2 px-3 bg-white border-top">
+          <footer class="main-footer d-flex p-2 px-3 border-top">
             <ul class="nav">
               <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
