--- a/add-new-post.html
+++ b/add-new-post.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0" href="styles/shards-dashboards.1.1.0.min.css">
     <link rel="stylesheet" href="styles/extras.1.1.0.min.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.snow.css"> </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.snow.css"> 
+    
+      <link href="styles/win95.css" rel="stylesheet">
+      
+    </head>
   <body class="h-100">
     <div class="color-switcher animated">
       <h5>Accent Color</h5>
@@ -71,7 +75,7 @@
               <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
                 <div class="d-table m-auto">
                   <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="images/shards-dashboards-logo.svg" alt="Shards Dashboard">
-                  <span class="d-none d-md-inline ml-1">Shards Dashboard</span>
+                  <span class="d-none d-md-inline ml-1">Shards Dashboard Win95</span>
                 </div>
               </a>
               <a class="toggle-sidebar d-sm-inline d-md-none d-lg-none">
@@ -139,7 +143,7 @@
         <main class="main-content col-lg-10 col-md-9 col-sm-12 p-0 offset-lg-2 offset-md-3">
           <div class="main-navbar sticky-top bg-white">
             <!-- Main Navbar -->
-            <nav class="navbar align-items-stretch navbar-light flex-md-nowrap p-0">
+            <nav class="navbar navbar-95 align-items-stretch navbar-light flex-md-nowrap p-0">
               <form action="#" class="main-navbar__search w-100 d-none d-md-flex d-lg-flex">
                 <div class="input-group input-group-seamless ml-3">
                   <div class="input-group-prepend">
@@ -226,8 +230,8 @@
                 <div class="card card-small mb-3">
                   <div class="card-body">
                     <form class="add-new-post">
-                      <input class="form-control form-control-lg mb-3" type="text" placeholder="Your Post Title">
-                      <div id="editor-container" class="add-new-post__editor mb-1"></div>
+                      <input class="mb-3 form-95" type="text" placeholder="Your Post Title">
+                      <div id="editor-container" class="add-new-post__editor form-95 mb-1"></div>
                     </form>
                   </div>
                 </div>
@@ -282,32 +286,30 @@
                   <div class='card-body p-0'>
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item px-3 pb-2">
-                        <div class="custom-control custom-checkbox mb-1">
-                          <input type="checkbox" class="custom-control-input" id="category1" checked>
-                          <label class="custom-control-label" for="category1">Uncategorized</label>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-1">
-                          <input type="checkbox" class="custom-control-input" id="category2" checked>
-                          <label class="custom-control-label" for="category2">Design</label>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-1">
-                          <input type="checkbox" class="custom-control-input" id="category3">
-                          <label class="custom-control-label" for="category3">Development</label>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-1">
-                          <input type="checkbox" class="custom-control-input" id="category4">
-                          <label class="custom-control-label" for="category4">Writing</label>
-                        </div>
-                        <div class="custom-control custom-checkbox mb-1">
-                          <input type="checkbox" class="custom-control-input" id="category5">
-                          <label class="custom-control-label" for="category5">Books</label>
-                        </div>
+                          <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck1">
+                            <label class="form-check-label" for="gridCheck1">
+                              Example checkbox
+                            </label>
+                          </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck2">
+                            <label class="form-check-label" for="gridCheck2">
+                              Example checkbox
+                            </label>
+                          </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck3">
+                            <label class="form-check-label" for="gridCheck3">
+                              Example checkbox
+                            </label>
+                          </div>
                       </li>
                       <li class="list-group-item d-flex px-3">
                         <div class="input-group">
-                          <input type="text" class="form-control" placeholder="New category" aria-label="Add new category" aria-describedby="basic-addon2">
+                          <input type="text" class="form-control form-95" placeholder="New category" aria-label="Add new category" aria-describedby="basic-addon2">
                           <div class="input-group-append">
-                            <button class="btn btn-white px-2" type="button">
+                            <button class="btn  px-2" type="button">
                               <i class="material-icons">add</i>
                             </button>
                           </div>
