--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Main Sidebar -->
         <aside class="main-sidebar col-12 col-md-3 col-lg-2 px-0">
           <div class="main-navbar">
-            <nav class="navbar align-items-stretch navbar-light bg-white flex-md-nowrap border-bottom p-0">
+            <nav class="navbar bg-silver align-items-stretch navbar-light flex-md-nowrap border-bottom p-0">
               <a class="navbar-brand w-100 mr-0" href="#" style="line-height: 25px;">
                 <div class="d-table m-auto">
                   <img id="main-logo" class="d-inline-block align-top mr-1" style="max-width: 25px;" src="images/shards-dashboards-logo.svg" alt="Shards Dashboard">
@@ -83,7 +83,7 @@
               </a>
             </nav>
           </div>
-          <form action="#" class="main-sidebar__search w-100 border-right d-sm-flex d-md-none d-lg-none">
+          <form action="#" class="main-sidebar__search w-100 border-right d-sm-flex d-md-none d-lg-none  bg-silver">
             <div class="input-group input-group-seamless ml-3">
               <div class="input-group-prepend">
                 <div class="input-group-text">
@@ -283,7 +283,7 @@
                         <h6 class="stats-small__value count my-3">2,413</h6>
                       </div>
                       <div class="stats-small__data">
-                        <span class="stats-small__percentage stats-small__percentage--increase">12.4%</span>
+                        <span class="stats-small__percentage stats-small__percentage--increase" style="color: 306136;">12.4%</span>
                       </div>
                     </div>
                     <canvas height="120" class="blog-overview-stats-small-4"></canvas>
@@ -319,10 +319,10 @@
                     <div class="row border-bottom py-2">
                       <div class="col-12 col-sm-6">
                         <div id="blog-overview-date-range" class="input-daterange input-group input-group-sm my-auto ml-auto mr-auto ml-sm-auto mr-sm-0" style="max-width: 350px;">
-                          <input type="text" class="input-sm form-control" name="start" placeholder="Start Date" id="blog-overview-date-range-1">
-                          <input type="text" class="input-sm form-control" name="end" placeholder="End Date" id="blog-overview-date-range-2">
-                          <span class="input-group-append">
-                            <span class="input-group-text">
+                          <input type="text" class="input-sm form-control form-95" name="start" placeholder="Start Date" id="blog-overview-date-range-1">
+                          <input type="text" class="input-sm form-control form-95" name="end" placeholder="End Date" id="blog-overview-date-range-2">
+                          <span class="input-group-append ">
+                            <span class="input-group-text form-95-text">
                               <i class="material-icons"></i>
                             </span>
                           </span>
@@ -569,8 +569,7 @@
                 <a class="nav-link" href="#">Blog</a>
               </li>
             </ul>
-            <span class="copyright ml-auto my-auto mr-2">Copyright © 2018
-              <a href="https://designrevision.com" rel="nofollow">DesignRevision</a>
+            <span class="copyright ml-auto my-auto mr-2">2019 Made With <a href="https://github.com/AlexBSoft/win95.css" >Win95.CSS</a>
             </span>
           </footer>
         </main>
@@ -585,6 +584,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js"></script>
     <script src="scripts/extras.1.1.0.min.js"></script>
     <script src="scripts/shards-dashboards.1.1.0.min.js"></script>
+      <!-- CHARTS CONFIG IN THIS SCRIPT -->
     <script src="scripts/app/app-blog-overview.1.1.0.js"></script>
   </body>
 </html>
